Revert "fixes spacing and styling of input label"
This reverts commit 19c1b3b36bf6aa9938c6b3d78ae723a13e27e98a.

--- a/packages/react-components/src/components/Select/Select.css
+++ b/packages/react-components/src/components/Select/Select.css
@@ -8,10 +8,9 @@
 
 /* Label above select input */
 .bcds-react-aria-Select--Label {
-  display: flex;
   color: var(--typography-color-secondary);
   font: var(--typography-regular-small-body);
-  padding: var(--layout-padding-small) var(--layout-padding-none);
+  gap: var(--layout-margin-xsmall);
 }
 .bcds-react-aria-Select[data-disabled] > .bcds-react-aria-Select--Label {
   color: var(--typography-color-disabled);
@@ -19,13 +18,12 @@
 
 /* "(optional)" text after Label*/
 .bcds-react-aria-Select--Label > .optional {
-  color: var(--typography-color-primary);
-  padding: var(--layout-padding-none) var(--layout-padding-xsmall);
+  color: var(--typography-color-secondary);
 }
 
 /* Error message */
 .bcds-react-aria-Select--Error {
-  font: var(--typography-regular-small-body);
+  font: var(--typography-regular-body);
   color: var(--typography-color-danger);
 }
 
@@ -38,6 +36,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: var(--layout-margin-small);
+  padding: var(--layout-padding-small) 12px;
+  margin: var(--layout-margin-xsmall) var(--layout-margin-none);
 }
 .bcds-react-aria-Select--Button.invalid {
   border-color: var(--support-border-color-danger);
